[package]
name = "finance-back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
dotenvy = "0.15.7"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
